--- a/responsive.html
+++ b/responsive.html
@@ -10,7 +10,7 @@
 <div id="container">
     <img src="landing.jpg"/>
         <section id="left-column">
-        this design is written by Mounika  
+        This design is developed by mounika  
         </section>
         <aside id="right-column">
         my website my creation
